--- a/package.json
+++ b/package.json
@@ -42,5 +42,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://username.github.io/repository-name"
+  "homepage": "https://o-sreerag.github.io/Netflix-clone-tmdb_api_calls-/"
 }
